<html><head></head><body>

<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 1.99.5 2024/6/17
  <ul>
    <li>Mac版の日本語訳を修正</li>
  </ul>
</li>
<!-- END-LATEST-JP -->

<li>Polaris Engine 1.99.4 2024/6/17
  <ul>
    <li>アイコンの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.99.3 2024/6/17
  <ul>
    <li>軽微な修正</li>
  </ul>
</li>
<li>Polaris Engine 1.99.2 2024/6/16
  <ul>
    <li>リブランド時に未変更だったファイル名の変更</li>
  </ul>
</li>
<li>Polaris Engine 1.99.1 2024/6/16
  <ul>
    <li>GitHubの整理</li>
  </ul>
</li>
<li>Polaris Engine 1.99.0 2024/6/16
  <ul>
    <li>GitHubのみの開発体制に移行</li>
  </ul>
</li>
<li>Polaris Engine 1.4.6 2024/6/15
  <ul>
    <li>GitHubでの自動ビルドに変更</li>
  </ul>
</li>
<li>Polaris Engine 1.4.5 2024/6/15
  <ul>
    <li>GitHubにアップロードするように変更</li>
  </ul>
</li>
<li>Polaris Engine 1.4.4 2024/6/14
  <ul>
    <li>リブランド(修正)</li>
  </ul>
</li>
<li>Polaris Engine 1.4.3 2024/6/14
  <ul>
    <li>リブランド(修正)</li>
  </ul>
</li>
<li>Polaris Engine 1.4.2 2024/6/14
  <ul>
    <li>リブランド(修正)</li>
  </ul>
</li>
<li>Polaris Engine 1.4.1 2024/6/14
  <ul>
    <li>リブランド(修正)</li>
  </ul>
</li>
<li>Polaris Engine 1.4.0 2024/6/14
  <ul>
    <li>リブランド</li>
  </ul>
</li>
<li>x-engine 1.1.8 (1.3.37) 2024/6/12
  <ul>
    <li>Unityエクスポートのバグ修正</li>
  </ul>
</li>
<li>x-engine 1.1.7 (1.3.36) 2024/6/12
  <ul>
    <li>MacでのUnityエクスポートを追加</li> <li>ゲーム機用のUnityエクスポートを改善</li>
  </ul>
</li>
<li>x-engine 1.1.6 (1.3.35) 2024/6/11
  <ul>
    <li>Windows用インストーラのエクスポートを削除</li>
  </ul>
</li>
<li>x-engine 1.1.5 (1.3.34) 2024/6/10
  <ul>
    <li>iOSエクスポートで動画をコピーするように改善</li>
  </ul>
</li>
<li>x-engine 1.1.4 (1.3.33) 2024/6/10
  <ul>
    <li>Updated the English template</li>
  </ul>
</li>
<li>x-engine 1.1.3 (1.3.32) 2024/6/10
  <ul>
    <li>iOSエクスポートの実行時エラーを修正</li>
  </ul>
</li>
<li>x-engine 1.1.2 (1.3.31) 2024/6/10
  <ul>
    <li>switch/newsコマンドの削除が不完全な点を修正</li>
  </ul>
</li>
<li>x-engine 1.1.1 (1.3.30) 2024/6/10<ul> <li>switch/newsコマンドの削除が不完全な点を修正</li>
  </ul>
</li>
<li>x-engine 1.1.0 (1.3.29) 2024/6/9
  <ul>