@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">x-engine</string>
+    <string name="app_name">Polaris Engine</string>
 </resources>
