@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">x-engine</string>
+    <string name="app_name">Polaris Engine</string>
     <style name="Theme.AppCompat" parent="android:Theme.Light" />
 </resources>
