@@ -25,8 +25,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "26E7F0822B2E979B0076C82C"
-               BuildableName = "x-engine.app"
-               BlueprintName = "x-engine"
+               BuildableName = "polaris-engine.app"
+               BlueprintName = "polaris-engine"
                ReferencedContainer = "container:pro-ios.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -54,8 +54,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "26E7F0822B2E979B0076C82C"
-            BuildableName = "x-engine.app"
-            BlueprintName = "x-engine"
+            BuildableName = "polaris-engine.app"
+            BlueprintName = "polaris-engine"
             ReferencedContainer = "container:pro-ios.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -71,8 +71,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "26E7F0822B2E979B0076C82C"
-            BuildableName = "x-engine.app"
-            BlueprintName = "x-engine"
+            BuildableName = "polaris-engine.app"
+            BlueprintName = "polaris-engine"
             ReferencedContainer = "container:pro-ios.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
