@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>x-engine Wasm</title>
+  <title>Polaris Engine Wasm</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1, initial-scale=1">
   <style>
     html, body {
